Mudanca arquivo configura o netbeans

--- a/Nhock-Project/nbproject/private/private.properties
+++ b/Nhock-Project/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Documents and Settings\\maike_p_santos\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Documents and Settings\\kaleu.caminha\\.netbeans\\7.0\\build.properties
